@@ -1,5 +1,7 @@
 2016-09-01  Jérôme Pasquier  <rainbru@free.fr>
 
+	* CI/script.sh (clang++): try using libc++ to fix max_align_t issue.
+
 	* CI/before_install.sh (apt-get): add --force-yes due to GPG errors.
 
 	* CI/before_install.sh: trying clang 3.8 instead of 3.9.
